<resources>
    <string name="app_name">StateMachine</string>

    <string name="hello_blank_fragment">### Hello blank fragment ###</string>

    <string name="button_A">A</string>
    <string name="button_B">B</string>
    <string name="button_C">C</string>
    <string name="button_D">D</string>
    <string name="button_E">E</string>
    <string name="button_F">F</string>
    <string name="button_G">G</string>
    <string name="button_H">H</string>
</resources>
